tests/test_input_files/good/test_good_return_stmt_11.punkt
function f <> -> void {
	while true
		return.
}

main {
	f(). print "nice".
}
