tests/test_input_files/bad/test_bad_return_stmt_3.punkt
main {
	const f = <> -> int { return true. }.
	f().
}
